# deluge-macro

./: Cargo.toml
src/: derive_query.rs  lib.rs  rpc_class.rs  rpc_events.rs
