[package]
name = "deluge-rpc-macro"
version = "0.3.1"
authors = ["The0x539 <the0x539@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "Procedural macros used by the deluge-rpc crate."
repository = "https://github.com/The0x539/deluge-macro"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.23", features = ["full", "extra-traits"] }
quote = "1.0.5"
proc-macro2 = "1.0.13"
